--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "firebase": "^8.2.3",
     "next": "10.0.5",
     "next-redux-wrapper": "^6.0.2",
+    "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^6.14.2",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
