--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "pages/index.tsx"  ],
+, "pages/index.tsx", "pages/_app.js", "pages/Auth.jsx"  ],
   "exclude": [
     "node_modules"
   ]
