--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "child_process": "^1.0.2",
     "firebase": "^8.2.3",
     "firebase-admin": "^9.4.2",
     "next": "10.0.5",
