--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "pages/index.tsx", "pages/_app.js", "pages/Auth.jsx", "pages/_document.js"  ],
+, "pages/index.tsx", "pages/_app.js", "pages/_Auth.jsx", "pages/_document.js"  ],
   "exclude": [
     "node_modules"
   ]
